--- a/Redaction/Rapport_Intermediaire/rapport_inter.tex
+++ b/Redaction/Rapport_Intermediaire/rapport_inter.tex
@@ -39,37 +39,37 @@
 \usepackage{framed}
 \definecolor{shadecolor}{RGB}{248,248,248}
 \newenvironment{Shaded}{\begin{snugshade}}{\end{snugshade}}
-\newcommand{\AlertTok}[1]{\textcolor[rgb]{0.94,0.16,0.16}{#1}}
-\newcommand{\AnnotationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
-\newcommand{\AttributeTok}[1]{\textcolor[rgb]{0.77,0.63,0.00}{#1}}
-\newcommand{\BaseNTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
-\newcommand{\BuiltInTok}[1]{#1}
-\newcommand{\CharTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
-\newcommand{\CommentTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{#1}}}
-\newcommand{\CommentVarTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
-\newcommand{\ConstantTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
-\newcommand{\ControlFlowTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
+\newcommand{\KeywordTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
 \newcommand{\DataTypeTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{#1}}
 \newcommand{\DecValTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
-\newcommand{\DocumentationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
-\newcommand{\ErrorTok}[1]{\textcolor[rgb]{0.64,0.00,0.00}{\textbf{#1}}}
-\newcommand{\ExtensionTok}[1]{#1}
+\newcommand{\BaseNTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
 \newcommand{\FloatTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
-\newcommand{\FunctionTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
-\newcommand{\ImportTok}[1]{#1}
-\newcommand{\InformationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
-\newcommand{\KeywordTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
-\newcommand{\NormalTok}[1]{#1}
-\newcommand{\OperatorTok}[1]{\textcolor[rgb]{0.81,0.36,0.00}{\textbf{#1}}}
-\newcommand{\OtherTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{#1}}
-\newcommand{\PreprocessorTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{#1}}}
-\newcommand{\RegionMarkerTok}[1]{#1}
+\newcommand{\ConstantTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\CharTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
 \newcommand{\SpecialCharTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
-\newcommand{\SpecialStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
 \newcommand{\StringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
-\newcommand{\VariableTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
 \newcommand{\VerbatimStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\SpecialStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\ImportTok}[1]{#1}
+\newcommand{\CommentTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{#1}}}
+\newcommand{\DocumentationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\AnnotationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\CommentVarTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\OtherTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{#1}}
+\newcommand{\FunctionTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\VariableTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\ControlFlowTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
+\newcommand{\OperatorTok}[1]{\textcolor[rgb]{0.81,0.36,0.00}{\textbf{#1}}}
+\newcommand{\BuiltInTok}[1]{#1}
+\newcommand{\ExtensionTok}[1]{#1}
+\newcommand{\PreprocessorTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{#1}}}
+\newcommand{\AttributeTok}[1]{\textcolor[rgb]{0.77,0.63,0.00}{#1}}
+\newcommand{\RegionMarkerTok}[1]{#1}
+\newcommand{\InformationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
 \newcommand{\WarningTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\AlertTok}[1]{\textcolor[rgb]{0.94,0.16,0.16}{#1}}
+\newcommand{\ErrorTok}[1]{\textcolor[rgb]{0.64,0.00,0.00}{\textbf{#1}}}
+\newcommand{\NormalTok}[1]{#1}
 \ifxetex
   \usepackage[setpagesize=false, % page size defined by xetex
               unicode=false, % unicode breaks when used with xetex
@@ -112,14 +112,13 @@ sous l'encadrement de Benjamin Muller (Inria)}
 \maketitle
 
 
-\hypertarget{contexte}{%
-\section{Contexte}\label{contexte}}
+\section{Contexte}\label{contexte}
 
 Grâce à l'évolution des méthodes d'apprentissage profond (\emph{Deep
 Learning}), l'appréhension du langage naturel est aujourd'hui devenu une
 discipline à part entière (\emph{Natural Language Processing}). Ce
 succès s'explique en partie grâce à l'émergence de techniques non
-supervisée d'apprentissage de représentation de structures
+supervisées d'apprentissage de représentation de structures
 linguistiques. Les méthodes de \emph{word embedding} (« plongement
 lexical » en français) permettent de représenter chaque mot d'un
 dictionnaire par un vecteur de nombres réels afin que les mots qui
@@ -129,8 +128,7 @@ correspondants qui sont relativement proches. Les modèles
 (\cite{Mikolov}), sont parmi les plus célèbres et sont ceux sur lesquels
 se concentrera notre projet.
 
-\hypertarget{objectif-du-projet}{%
-\section{Objectif du projet}\label{objectif-du-projet}}
+\section{Objectif du projet}\label{objectif-du-projet}
 
 Dans ce projet de statistiques appliquées, nous étudierons dans un
 premier temps en détail et implémenterons le modèle \emph{word2vec}.
@@ -141,12 +139,10 @@ de sentiments afin de créer des indicateurs qui pourront être comparés
 aux indicateurs produits dans la statistique publique, en particulier
 concernant l'opinion des ménages.
 
-\hypertarget{travail-effectuuxe9-jusqualors}{%
 \section{Travail effectué
-jusqu'alors}\label{travail-effectuuxe9-jusqualors}}
+jusqu'alors}\label{travail-effectuuxe9-jusqualors}
 
-\hypertarget{appropriation-du-moduxe8le}{%
-\subsection{Appropriation du modèle}\label{appropriation-du-moduxe8le}}
+\subsection{Appropriation du modèle}\label{appropriation-du-moduxe8le}
 
 Pour débuter ce projet, nous nous sommes documentés sur les méthodes de
 NLP et de Deep-learning en lisant la bibliographie ainsi que des
@@ -205,15 +201,15 @@ l'algorithme, nous faisons la moyenne de ces matrices. C'est cette
 moyenne qui représentera les vecteurs finaux de représentation des mots
 du corpus.
 
-\hypertarget{impluxe9mentation-du-moduxe8le}{%
 \subsection{Implémentation du
-modèle}\label{impluxe9mentation-du-moduxe8le}}
+modèle}\label{impluxe9mentation-du-moduxe8le}
 
-Après s'être approprié le fonctionnement du modèle \textbf{word2vec},
-nous avons tous les trois implémenté individuellement le modèle sur
-Python en utilisant la librairie Pytorch. Ce travail individuel a permis
-à chacun d'approfondir la compréhension du modèle et d'obtenir une
-version actuelle conforme aux recommandations de l'article de Mikolov.
+Après nous être appropriés le fonctionnement du modèle
+\textbf{word2vec}, nous avons tous les trois implémenté individuellement
+le modèle sur Python en utilisant la librairie Pytorch. Ce travail
+individuel a permis à chacun d'approfondir la compréhension du modèle et
+d'obtenir une version actuelle conforme aux recommandations de l'article
+de Mikolov.
 
 En première étape, nous avons implémenté une version simplifiée du
 modèle \emph{word2vec} en utilisant la fonction \emph{softmax} décrite
@@ -224,16 +220,15 @@ C'est pourquoi nous avons en seconde étape implémenté une version plus
 élaborée du modèle grâce à la méthode du \emph{negative sampling}. Cette
 méthode est d'une part moins coûteuse en temps de calcul puisqu'elle
 permet d'actualiser uniquement une partie de la matrice de poids (celle
-qui concerne le mot contexte sur lequel on travaille). Elle permet
-d'autre part de corriger la sur-estimation des poids des mots contextes
-tirés au hasard puisqu'elle implique de tirer également au hasard des
-mots qui ne sont pas dans le contexte du mot focus, mots pour lesquels
-on va chercher à minimiser leur proximité au mot focus dans la fonction
-de \emph{loss}.
+qui concerne le mot contexte et les \emph{negatives samples} sur
+lesquels on travaille). Elle permet d'autre part de corriger la
+sur-estimation des poids des mots contextes tirés au hasard puisqu'elle
+implique de tirer également au hasard des mots qui ne sont pas dans le
+contexte du mot focus, mots pour lesquels on va chercher à minimiser
+leur proximité au mot focus dans la fonction de \emph{loss}.
 
-\hypertarget{uxe9valuation-du-moduxe8le-impluxe9mentuxe9}{%
 \subsection{Évaluation du modèle
-implémenté}\label{uxe9valuation-du-moduxe8le-impluxe9mentuxe9}}
+implémenté}\label{uxe9valuation-du-moduxe8le-impluxe9mentuxe9}
 
 Malgré l'utilisation généralisée des \emph{word embedding}, très peu de
 travaux théoriques expliquent ce qui est réellement capturé par ces
@@ -289,12 +284,10 @@ graphiquement cette proximité (cf.~figure \ref{fig:figure_evaluation}).
 
 \normalsize
 
-\hypertarget{perspectives}{%
-\section{Perspectives}\label{perspectives}}
+\section{Perspectives}\label{perspectives}
 
-\hypertarget{impluxe9mentation-et-uxe9valuation}{%
 \subsection{Implémentation et
-évaluation}\label{impluxe9mentation-et-uxe9valuation}}
+évaluation}\label{impluxe9mentation-et-uxe9valuation}
 
 Nous travaillons actuellement à la mise en commun de nos implémentations
 individuelles afin d'aboutir à une version finalisée du modèle. Nous
@@ -311,8 +304,7 @@ si selon eux certains couples de mots sont proches ou éloignés
 subjective aux résultats de notre modèle. Cette comparaison s'effectue
 grâce au calcul d'une \emph{corrélation de Spearman}.
 
-\hypertarget{analyse}{%
-\subsection{Analyse}\label{analyse}}
+\subsection{Analyse}\label{analyse}
 
 Notre objectif final est de comparer des données produites par la
 statistique publique à ce qu'il est possible d'obtenir grâce aux tweets.
