--- a/Redaction/Rapport_Intermediaire/rapport_inter.Rmd
+++ b/Redaction/Rapport_Intermediaire/rapport_inter.Rmd
@@ -43,7 +43,10 @@ library(reticulate)
 
 # Contexte
 
-Grâce à l'évolution des méthodes d'apprentissage profond (*Deep Learning*), l'appréhension du langage naturel est aujourd'hui devenu une discipline à part entière (*Natural Language Processing*). Ce succès s'explique en partie grâce à l'émergence de techniques non supervisées d'apprentissage de représentation de structures linguistiques. Les méthodes de *word embedding* (« plongement lexical » en français) permettent de représenter chaque mot d'un dictionnaire par un vecteur de nombres réels afin que les mots qui apparaissant dans des contextes similaires possèdent des vecteurs correspondants qui sont relativement proches. Les modèles **word2vec**, développés par une équipe de recherche chez Google (\cite{Mikolov}), sont parmi les plus célèbres et sont ceux sur lesquels se concentrera notre projet. 
+Grâce à l'évolution des méthodes d'apprentissage profond (*Deep Learning*), l'appréhension du langage naturel est aujourd'hui devenu une discipline à part entière (*Natural Language Processing*). 
+Ce succès s'explique en partie grâce à l'émergence de techniques non supervisées d'apprentissage de représentation de structures linguistiques. 
+Les méthodes de *word embedding* (« plongement lexical » en français) permettent de représenter chaque mot d'un dictionnaire par un vecteur de nombres réels afin que les mots qui apparaissant dans des contextes similaires possèdent des vecteurs correspondants qui sont relativement proches. 
+Les modèles **word2vec**, développés par une équipe de recherche chez Google (\cite{Mikolov}), sont parmi les plus célèbres et sont ceux sur lesquels se concentrera notre projet. 
 
 # Objectif du projet 
 
@@ -79,9 +82,11 @@ C'est pourquoi nous avons en seconde étape implémenté une version plus élabo
 
 ## Évaluation du modèle implémenté
 
-Malgré l'utilisation généralisée des *word embedding*, très peu de travaux théoriques expliquent ce qui est réellement capturé par ces représentations de mots. C'est pourquoi ce modèle est principalement évalué à l'aide de méthodes empiriques. 
+Malgré l'utilisation généralisée des *word embedding*, très peu de travaux théoriques expliquent ce qui est réellement capturé par ces représentations de mots. 
+C'est pourquoi ce modèle est principalement évalué à l'aide de méthodes empiriques. 
 
-Avant de nous attaquer au jeu de données complet, nous avons évalué un premier corpus fictif. Nous avons associé dix couples (du type [voiture, camion]), à dix mots contexte différents ([véhicule, moto, ...]). Le corpus fictif est formé de 10 000 phrases composées chacune d'un mot d'un couple, de cinq mots du contexte et de trois mots bruits, tous tirés aléatoirement. 
+Avant de nous attaquer au jeu de données complet, nous avons évalué un premier corpus fictif. Nous avons associé dix couples (du type [voiture, camion]), à dix mots contexte différents ([véhicule, moto, \dots]). 
+Le corpus fictif est formé de 10 000 phrases composées chacune d'un mot d'un couple, de cinq mots du contexte et de trois mots bruits, tous tirés aléatoirement. 
 
 Nous avons retenu à ce stade trois méthodes pour évaluer les vecteurs obtenus en sortie du modèle : 
 
@@ -89,9 +94,11 @@ Nous avons retenu à ce stade trois méthodes pour évaluer les vecteurs obtenus
 
 - Une *analyse en composantes principales* (*ACP*) qui consiste à projeter les vecteurs de mots sur un plus faible nombre d'axes afin de rendre l'information moins redondante et plus visuelle. 
 
-- L'algorithme *T-SNE*, ou *t-distributed Stochastic Neighbor Embedding*, une autre technique de réduction de dimension, plus efficace que l'ACP dans le cas d'un nombre important de données. L'algorithme se fonde cette fois-ci sur une interprétation probabiliste des proximités et est non-linéaire. 
+- L'algorithme *t-SNE*, ou *t-distributed Stochastic Neighbor Embedding*, une autre technique de réduction de dimension, plus efficace que l'ACP dans le cas d'un nombre important de données. 
+L'algorithme se fonde cette fois-ci sur une interprétation probabiliste des proximités et est non-linéaire. 
 
-Nous avons donc mis en oeuvre ces trois techniques sur notre corpus fictif. Les résultats semblent concluants : la similarité cosinus montre bien une forte corrélation entre les mots focus et contexte du corpus initial et l'ACP et l'algorithme t-SNE permettent également de montrer graphiquement cette proximité (cf. figure \ref{fig:figure_evaluation}).
+Nous avons donc mis en oeuvre ces trois techniques sur notre corpus fictif. 
+Les résultats semblent concluants : la similarité cosinus montre bien une forte corrélation entre les mots focus et contexte du corpus initial et l'ACP et l'algorithme t-SNE permettent également de montrer graphiquement cette proximité (figure \ref{fig:figure_evaluation}).
 
 \footnotesize
 ```{python, eval=FALSE}
@@ -109,13 +116,17 @@ mot_plus_proche("grand", n = 50)
 
 ## Implémentation et évaluation
 
-Nous travaillons actuellement à la mise en commun de nos implémentations individuelles afin d'aboutir à une version finalisée du modèle. Nous devrons ensuite faire tourner notre modèle sur les tweets mis à notre disposition. Cette étape sera également l'occasion d'optimiser les étapes chronophages du code si nécessaire.
+Nous travaillons actuellement à la mise en commun de nos implémentations individuelles afin d'aboutir à une version finalisée du modèle. 
+Nous devrons ensuite faire tourner notre modèle sur les tweets mis à notre disposition. Cette étape sera également l'occasion d'optimiser les étapes chronophages du code si nécessaire.
 
-Les vecteurs obtenus à l'issue de l'algorithme nous permettront ensuite de procéder à l'évaluation du modèle sur données réelles. Pour ce faire, en plus d'utiliser les données d'évaluation décrites ci-dessus, nous mobiliserons une base de données qui demande à des personnes d'indiquer si selon eux certains couples de mots sont proches ou éloignés (*Human Judgement Agreement*). Il faudra comparer cette similarité subjective aux résultats de notre modèle. Cette comparaison s'effectue grâce au calcul d'une *corrélation de Spearman*.
+Les vecteurs obtenus à l'issue de l'algorithme nous permettront ensuite de procéder à l'évaluation du modèle sur données réelles. 
+Pour ce faire, en plus d'utiliser les données d'évaluation décrites ci-dessus, nous mobiliserons une base de données qui demande à des personnes d'indiquer si selon eux certains couples de mots sont proches ou éloignés (*Human Judgement Agreement*). 
+Il faudra comparer cette similarité subjective aux résultats de notre modèle. Cette comparaison s'effectue grâce au calcul d'une *corrélation de Spearman*.
 
 ## Analyse
  
-Notre objectif final est de comparer des données produites par la statistique publique à ce qu'il est possible d'obtenir grâce aux tweets. Différents échanges avec l'Insee nous amènent à nous diriger vers une de ces différentes problématiques : 
+Notre objectif final est de comparer des données produites par la statistique publique à ce qu'il est possible d'obtenir grâce aux tweets. 
+Différents échanges avec l'Insee nous amènent à nous diriger vers une de ces différentes problématiques : 
 
 - Les tweets permettent-ils d'obtenir des indicateurs synthétiques d'opinion des ménages proches de ceux produits dans la statistique publique (comme l’enquête de conjoncture Camme auprès des ménages, Insee) ? 
 
@@ -130,14 +141,15 @@ Notre objectif final est de comparer des données produites par la statistique p
 \caption{Évaluation du modèle sur données fictives}\label{fig:figure_evaluation}
 \end{figure}
 
-Quelle que soit la problématique choisie à terme, nous tenterons de calculer des indicateurs synthétiques à l'aide de techniques d'analyse de sentiments. Nous devons également garder en tête les différentes limites des données à notre disposition : leur faible profondeur temporelle rendant complexe la prévision de données trimestrielles ou encore leur thématique se rapprochant certainement davantage des questions d'opinions des ménages plutôt que des informations liées aux entreprises (habituellement utilisées dans les prévisions macroéconomiques). 
+Quelle que soit la problématique choisie à terme, nous tenterons de calculer des indicateurs synthétiques à l'aide de techniques d'analyse de sentiments. 
+Nous devons également garder en tête les différentes limites des données à notre disposition : leur faible profondeur temporelle rendant complexe la prévision de données trimestrielles ou encore leur thématique se rapprochant certainement davantage des questions d'opinions des ménages plutôt que des informations liées aux entreprises (habituellement utilisées dans les prévisions macroéconomiques). 
 
 
 
 \nocite{*}
 \begin{thebibliography}{999}
-\bibitem[Bortoli, C., Combes, S., Renault, T. (2018)]{Monde} Bortoli, C., Combes, S., Renault, T. (2018). Nowcasting GDP Growth by Reading Newspapers. Economie et Statistique / Economics and Statistics, 505-506, 17–33. \url{https://doi.org/10.24187/ecostat.2018.505d.1964 }.
-\bibitem[Mikolov, T., et al. (2013)]{Mikolov}Mikolov, T.,  Chen, K., Corrado, G., Dean, J. (2013). Efficient Estimation of Word Representations in Vector Space \url{https://arxiv.org/pdf/1301.3781.pdf}.
+\bibitem[Bortoli, C., \emph{et al} (2018)]{Monde} Bortoli, C., Combes, S., Renault, T. (2018). Nowcasting GDP Growth by Reading Newspapers. Economie et Statistique / Economics and Statistics, 505-506, 17–33. \url{https://doi.org/10.24187/ecostat.2018.505d.1964 }.
+\bibitem[Mikolov, T., \emph{et al} (2013)]{Mikolov}Mikolov, T.,  Chen, K., Corrado, G., Dean, J. (2013). Efficient Estimation of Word Representations in Vector Space \url{https://arxiv.org/pdf/1301.3781.pdf}.
 \bibitem[Srivastava, M., Nguyen, T. (2018)]{Chomage}Srivastava, M., Nguyen, T. (2018). “Nowcasting” County Unemployment Using Twitter Data. \url{https://web.stanford.edu/class/archive/cs/cs224n/cs224n.1174/reports/2737035.pdf}.
 \end{thebibliography}
 
