--- a/Redaction/Rapport_Intermediaire/rapport_inter.tex
+++ b/Redaction/Rapport_Intermediaire/rapport_inter.tex
@@ -39,37 +39,37 @@
 \usepackage{framed}
 \definecolor{shadecolor}{RGB}{248,248,248}
 \newenvironment{Shaded}{\begin{snugshade}}{\end{snugshade}}
-\newcommand{\KeywordTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
+\newcommand{\AlertTok}[1]{\textcolor[rgb]{0.94,0.16,0.16}{#1}}
+\newcommand{\AnnotationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\AttributeTok}[1]{\textcolor[rgb]{0.77,0.63,0.00}{#1}}
+\newcommand{\BaseNTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
+\newcommand{\BuiltInTok}[1]{#1}
+\newcommand{\CharTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\CommentTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{#1}}}
+\newcommand{\CommentVarTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\ConstantTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\ControlFlowTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
 \newcommand{\DataTypeTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{#1}}
 \newcommand{\DecValTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
-\newcommand{\BaseNTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
-\newcommand{\FloatTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
-\newcommand{\ConstantTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
-\newcommand{\CharTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
-\newcommand{\SpecialCharTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
-\newcommand{\StringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
-\newcommand{\VerbatimStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
-\newcommand{\SpecialStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
-\newcommand{\ImportTok}[1]{#1}
-\newcommand{\CommentTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{#1}}}
 \newcommand{\DocumentationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
-\newcommand{\AnnotationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
-\newcommand{\CommentVarTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
-\newcommand{\OtherTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{#1}}
-\newcommand{\FunctionTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
-\newcommand{\VariableTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
-\newcommand{\ControlFlowTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
-\newcommand{\OperatorTok}[1]{\textcolor[rgb]{0.81,0.36,0.00}{\textbf{#1}}}
-\newcommand{\BuiltInTok}[1]{#1}
-\newcommand{\ExtensionTok}[1]{#1}
-\newcommand{\PreprocessorTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{#1}}}
-\newcommand{\AttributeTok}[1]{\textcolor[rgb]{0.77,0.63,0.00}{#1}}
-\newcommand{\RegionMarkerTok}[1]{#1}
-\newcommand{\InformationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
-\newcommand{\WarningTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
-\newcommand{\AlertTok}[1]{\textcolor[rgb]{0.94,0.16,0.16}{#1}}
 \newcommand{\ErrorTok}[1]{\textcolor[rgb]{0.64,0.00,0.00}{\textbf{#1}}}
+\newcommand{\ExtensionTok}[1]{#1}
+\newcommand{\FloatTok}[1]{\textcolor[rgb]{0.00,0.00,0.81}{#1}}
+\newcommand{\FunctionTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\ImportTok}[1]{#1}
+\newcommand{\InformationTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
+\newcommand{\KeywordTok}[1]{\textcolor[rgb]{0.13,0.29,0.53}{\textbf{#1}}}
 \newcommand{\NormalTok}[1]{#1}
+\newcommand{\OperatorTok}[1]{\textcolor[rgb]{0.81,0.36,0.00}{\textbf{#1}}}
+\newcommand{\OtherTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{#1}}
+\newcommand{\PreprocessorTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textit{#1}}}
+\newcommand{\RegionMarkerTok}[1]{#1}
+\newcommand{\SpecialCharTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\SpecialStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\StringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\VariableTok}[1]{\textcolor[rgb]{0.00,0.00,0.00}{#1}}
+\newcommand{\VerbatimStringTok}[1]{\textcolor[rgb]{0.31,0.60,0.02}{#1}}
+\newcommand{\WarningTok}[1]{\textcolor[rgb]{0.56,0.35,0.01}{\textbf{\textit{#1}}}}
 \ifxetex
   \usepackage[setpagesize=false, % page size defined by xetex
               unicode=false, % unicode breaks when used with xetex
@@ -112,7 +112,8 @@ sous l'encadrement de Benjamin Muller (Inria)}
 \maketitle
 
 
-\section{Contexte}\label{contexte}
+\hypertarget{contexte}{%
+\section{Contexte}\label{contexte}}
 
 Grâce à l'évolution des méthodes d'apprentissage profond (\emph{Deep
 Learning}), l'appréhension du langage naturel est aujourd'hui devenu une
@@ -128,7 +129,8 @@ correspondants qui sont relativement proches. Les modèles
 (\cite{Mikolov}), sont parmi les plus célèbres et sont ceux sur lesquels
 se concentrera notre projet.
 
-\section{Objectif du projet}\label{objectif-du-projet}
+\hypertarget{objectif-du-projet}{%
+\section{Objectif du projet}\label{objectif-du-projet}}
 
 Dans ce projet de statistiques appliquées, nous étudierons dans un
 premier temps en détail et implémenterons le modèle \emph{word2vec}.
@@ -139,10 +141,12 @@ de sentiments afin de créer des indicateurs qui pourront être comparés
 aux indicateurs produits dans la statistique publique, en particulier
 concernant l'opinion des ménages.
 
+\hypertarget{travail-effectuuxe9-jusqualors}{%
 \section{Travail effectué
-jusqu'alors}\label{travail-effectuuxe9-jusqualors}
+jusqu'alors}\label{travail-effectuuxe9-jusqualors}}
 
-\subsection{Appropriation du modèle}\label{appropriation-du-moduxe8le}
+\hypertarget{appropriation-du-moduxe8le}{%
+\subsection{Appropriation du modèle}\label{appropriation-du-moduxe8le}}
 
 Pour débuter ce projet, nous nous sommes documentés sur les méthodes de
 NLP et de Deep-learning en lisant la bibliographie ainsi que des
@@ -201,15 +205,15 @@ l'algorithme, nous faisons la moyenne de ces matrices. C'est cette
 moyenne qui représentera les vecteurs finaux de représentation des mots
 du corpus.
 
+\hypertarget{impluxe9mentation-du-moduxe8le}{%
 \subsection{Implémentation du
-modèle}\label{impluxe9mentation-du-moduxe8le}
+modèle}\label{impluxe9mentation-du-moduxe8le}}
 
-Après nous être appropriés le fonctionnement du modèle
-\textbf{word2vec}, nous avons tous les trois implémenté individuellement
-le modèle sur Python en utilisant la librairie Pytorch. Ce travail
-individuel a permis à chacun d'approfondir la compréhension du modèle et
-d'obtenir une version actuelle conforme aux recommandations de l'article
-de Mikolov.
+Après nous être approprié le fonctionnement du modèle \textbf{word2vec},
+nous avons tous les trois implémenté individuellement le modèle sur
+Python en utilisant la librairie Pytorch. Ce travail individuel a permis
+à chacun d'approfondir la compréhension du modèle et d'obtenir une
+version actuelle conforme aux recommandations de l'article de Mikolov.
 
 En première étape, nous avons implémenté une version simplifiée du
 modèle \emph{word2vec} en utilisant la fonction \emph{softmax} décrite
@@ -218,17 +222,18 @@ nécessite d'actualiser à chaque étape l'intégralité des matrices.
 
 C'est pourquoi nous avons en seconde étape implémenté une version plus
 élaborée du modèle grâce à la méthode du \emph{negative sampling}. Cette
-méthode est d'une part moins coûteuse en temps de calcul puisqu'elle
+méthode permet d'une part de corriger la sur-estimation des poids des
+mots contextes tirés au hasard puisqu'elle implique de tirer également
+au hasard des mots qui ne sont pas dans le contexte du mot focus
+(\emph{negatives samples}), mots pour lesquels on va chercher à
+minimiser leur proximité au mot focus dans la fonction de \emph{loss}.
+Elle est d'autre part moins coûteuse en temps de calcul puisqu'elle
 permet d'actualiser uniquement une partie de la matrice de poids (celle
-qui concerne le mot contexte et les \emph{negatives samples} sur
-lesquels on travaille). Elle permet d'autre part de corriger la
-sur-estimation des poids des mots contextes tirés au hasard puisqu'elle
-implique de tirer également au hasard des mots qui ne sont pas dans le
-contexte du mot focus, mots pour lesquels on va chercher à minimiser
-leur proximité au mot focus dans la fonction de \emph{loss}.
+qui concerne le mot contexte et les \emph{negatives samples}).
 
+\hypertarget{uxe9valuation-du-moduxe8le-impluxe9mentuxe9}{%
 \subsection{Évaluation du modèle
-implémenté}\label{uxe9valuation-du-moduxe8le-impluxe9mentuxe9}
+implémenté}\label{uxe9valuation-du-moduxe8le-impluxe9mentuxe9}}
 
 Malgré l'utilisation généralisée des \emph{word embedding}, très peu de
 travaux théoriques expliquent ce qui est réellement capturé par ces
@@ -238,9 +243,9 @@ représentations de mots. C'est pourquoi ce modèle est principalement
 Avant de nous attaquer au jeu de données complet, nous avons évalué un
 premier corpus fictif. Nous avons associé dix couples (du type
 {[}voiture, camion{]}), à dix mots contexte différents ({[}véhicule,
-moto, \ldots{}{]}). Le corpus fictif est formé de 10 000 phrases
-composées chacune d'un mot d'un couple, de cinq mots du contexte et de
-trois mots bruits, tous tirés aléatoirement.
+moto, \dots{]}). Le corpus fictif est formé de 10 000 phrases composées
+chacune d'un mot d'un couple, de cinq mots du contexte et de trois mots
+bruits, tous tirés aléatoirement.
 
 Nous avons retenu à ce stade trois méthodes pour évaluer les vecteurs
 obtenus en sortie du modèle :
@@ -256,7 +261,7 @@ obtenus en sortie du modèle :
   consiste à projeter les vecteurs de mots sur un plus faible nombre
   d'axes afin de rendre l'information moins redondante et plus visuelle.
 \item
-  L'algorithme \emph{T-SNE}, ou \emph{t-distributed Stochastic Neighbor
+  L'algorithme \emph{t-SNE}, ou \emph{t-distributed Stochastic Neighbor
   Embedding}, une autre technique de réduction de dimension, plus
   efficace que l'ACP dans le cas d'un nombre important de données.
   L'algorithme se fonde cette fois-ci sur une interprétation
@@ -267,7 +272,7 @@ Nous avons donc mis en oeuvre ces trois techniques sur notre corpus
 fictif. Les résultats semblent concluants : la similarité cosinus montre
 bien une forte corrélation entre les mots focus et contexte du corpus
 initial et l'ACP et l'algorithme t-SNE permettent également de montrer
-graphiquement cette proximité (cf.~figure \ref{fig:figure_evaluation}).
+graphiquement cette proximité (figure \ref{fig:figure_evaluation}).
 
 \footnotesize
 
@@ -284,10 +289,12 @@ graphiquement cette proximité (cf.~figure \ref{fig:figure_evaluation}).
 
 \normalsize
 
-\section{Perspectives}\label{perspectives}
+\hypertarget{perspectives}{%
+\section{Perspectives}\label{perspectives}}
 
+\hypertarget{impluxe9mentation-et-uxe9valuation}{%
 \subsection{Implémentation et
-évaluation}\label{impluxe9mentation-et-uxe9valuation}
+évaluation}\label{impluxe9mentation-et-uxe9valuation}}
 
 Nous travaillons actuellement à la mise en commun de nos implémentations
 individuelles afin d'aboutir à une version finalisée du modèle. Nous
@@ -304,7 +311,8 @@ si selon eux certains couples de mots sont proches ou éloignés
 subjective aux résultats de notre modèle. Cette comparaison s'effectue
 grâce au calcul d'une \emph{corrélation de Spearman}.
 
-\subsection{Analyse}\label{analyse}
+\hypertarget{analyse}{%
+\subsection{Analyse}\label{analyse}}
 
 Notre objectif final est de comparer des données produites par la
 statistique publique à ce qu'il est possible d'obtenir grâce aux tweets.
@@ -345,8 +353,8 @@ macroéconomiques).
 \nocite{*}
 
 \begin{thebibliography}{999}
-\bibitem[Bortoli, C., Combes, S., Renault, T. (2018)]{Monde} Bortoli, C., Combes, S., Renault, T. (2018). Nowcasting GDP Growth by Reading Newspapers. Economie et Statistique / Economics and Statistics, 505-506, 17–33. \url{https://doi.org/10.24187/ecostat.2018.505d.1964 }.
-\bibitem[Mikolov, T., et al. (2013)]{Mikolov}Mikolov, T.,  Chen, K., Corrado, G., Dean, J. (2013). Efficient Estimation of Word Representations in Vector Space \url{https://arxiv.org/pdf/1301.3781.pdf}.
+\bibitem[Bortoli, C., \emph{et al} (2018)]{Monde} Bortoli, C., Combes, S., Renault, T. (2018). Nowcasting GDP Growth by Reading Newspapers. Economie et Statistique / Economics and Statistics, 505-506, 17–33. \url{https://doi.org/10.24187/ecostat.2018.505d.1964 }.
+\bibitem[Mikolov, T., \emph{et al} (2013)]{Mikolov}Mikolov, T.,  Chen, K., Corrado, G., Dean, J. (2013). Efficient Estimation of Word Representations in Vector Space \url{https://arxiv.org/pdf/1301.3781.pdf}.
 \bibitem[Srivastava, M., Nguyen, T. (2018)]{Chomage}Srivastava, M., Nguyen, T. (2018). “Nowcasting” County Unemployment Using Twitter Data. \url{https://web.stanford.edu/class/archive/cs/cs224n/cs224n.1174/reports/2737035.pdf}.
 \end{thebibliography}
 
