Suite modifs : mots rares par taille

--- a/Code/0 - Formatage donnees.ipynb
+++ b/Code/0 - Formatage donnees.ipynb
@@ -9,7 +9,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import string\n",
+    "import re\n",
+    "import pandas as pd\n",
+    "import csv\n",
+    "import pickle\n",
+    "\n",
+    "os.chdir('C:/Users/torna/Documents/StatApp/StatApp')\n",
+    "#os.chdir('C:/Users/Kim Antunez/Documents/Projets_autres')\n",
+    "#os.chdir('/Users/alainquartierlatente/Desktop/Ensae/StatApp')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -24,17 +42,6 @@
     }
    ],
    "source": [
-    "import os\n",
-    "import string\n",
-    "import re\n",
-    "import pandas as pd\n",
-    "import csv\n",
-    "import pickle\n",
-    "\n",
-    "os.chdir('C:/Users/torna/Documents/StatApp/StatApp')\n",
-    "#os.chdir('C:/Users/Kim Antunez/Documents/Projets_autres')\n",
-    "#os.chdir('/Users/alainquartierlatente/Desktop/Ensae/StatApp')\n",
-    "\n",
     "df = pd.read_csv(\"data/sample_3.txt\",sep='\\n',header=None)\n",
     "print(string.punctuation + \"'’«»—\")\n",
     "def mise_en_forme_phrase (phrase):\n",
@@ -72,7 +79,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Si on veut récup un fichier existant pour travailler\n",
+    "with open(\"data/corpus.file\", \"rb\") as f:\n",
+    "    corpus = pickle.load(f) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Création corpus total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +128,7 @@
        "564362"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,21 +166,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Création corpus 10k"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nombre de mots : 31390592\n",
-      "Taille du vocabulaire : 70330\n"
+      "Nombre de mots : 111390\n",
+      "Taille du vocabulaire : 13419\n"
      ]
     }
    ],
    "source": [
-    "phrases = [phrase.split() for phrase in corpus_trie]\n",
+    "phrases = [phrase.split() for phrase in corpus[0:10000]]\n",
     "words = [item for sublist in phrases for item in sublist]\n",
     "vocabulary = set(words)\n",
     "print(\"Nombre de mots :\", len(words))\n",
@@ -164,22 +196,176 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "20"
+       "10205"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fdist[\"6h20\"]"
+    "import nltk\n",
+    "import collections\n",
+    "from collections import Counter\n",
+    "fdist = nltk.FreqDist(words)\n",
+    "# On va enlever les mots qui apparaissent moins de 3 fois\n",
+    "mots_a_enlever = [w for w in vocabulary if fdist[w]<3]\n",
+    "mots_a_enlever_dict = Counter(mots_a_enlever)\n",
+    "len(mots_a_enlever)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus_trie10k = [' '.join([(word if word not in mots_a_enlever_dict else \"lowfrequencyword\") for word in phrase.split()]) for phrase in corpus[0:10000]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# On ne garde que les tweets de 2 mots ou plus\n",
+    "corpus_trie10k = [phrase for phrase in corpus_trie10k if len(phrase.split())>=2]\n",
+    "with open(\"data/corpus_trie10k.file\", \"wb\") as f:\n",
+    "    pickle.dump(corpus_trie10k, f, pickle.HIGHEST_PROTOCOL)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Création corpus 100k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre de mots : 1127629\n",
+      "Taille du vocabulaire : 55793\n"
+     ]
+    }
+   ],
+   "source": [
+    "phrases = [phrase.split() for phrase in corpus[0:100000]]\n",
+    "words = [item for sublist in phrases for item in sublist]\n",
+    "vocabulary = set(words)\n",
+    "print(\"Nombre de mots :\", len(words))\n",
+    "print(\"Taille du vocabulaire :\", len(vocabulary))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "44834"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "import collections\n",
+    "from collections import Counter\n",
+    "fdist = nltk.FreqDist(words)\n",
+    "# On va enlever les mots qui apparaissent moins de 5 fois\n",
+    "mots_a_enlever = [w for w in vocabulary if fdist[w]<5]\n",
+    "mots_a_enlever_dict = Counter(mots_a_enlever)\n",
+    "len(mots_a_enlever)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus_trie100k = [' '.join([(word if word not in mots_a_enlever_dict else \"lowfrequencyword\") for word in phrase.split()]) for phrase in corpus[0:100000]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# On ne garde que les tweets de 2 mots ou plus\n",
+    "corpus_trie100k = [phrase for phrase in corpus_trie100k if len(phrase.split())>=2]\n",
+    "with open(\"data/corpus_trie100k.file\", \"wb\") as f:\n",
+    "    pickle.dump(corpus_trie100k, f, pickle.HIGHEST_PROTOCOL)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Vocabulaire après traitement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sur 10k\n",
+      "Nombre de mots : 111330\n",
+      "Taille du vocabulaire : 3215\n",
+      "Sur 100k\n",
+      "Nombre de mots : 1127347\n",
+      "Taille du vocabulaire : 10960\n",
+      "Sur tout\n",
+      "Nombre de mots : 31390592\n",
+      "Taille du vocabulaire : 70330\n"
+     ]
+    }
+   ],
+   "source": [
+    "phrases = [phrase.split() for phrase in corpus_trie]\n",
+    "phrases10k = [phrase.split() for phrase in corpus_trie10k]\n",
+    "phrases100k = [phrase.split() for phrase in corpus_trie100k]\n",
+    "words = [item for sublist in phrases for item in sublist]\n",
+    "words10k = [item for sublist in phrases10k for item in sublist]\n",
+    "words100k = [item for sublist in phrases100k for item in sublist]\n",
+    "vocabulary = set(words)\n",
+    "vocabulary10k = set(words10k)\n",
+    "vocabulary100k = set(words100k)\n",
+    "print(\"Sur 10k\")\n",
+    "print(\"Nombre de mots :\", len(words10k))\n",
+    "print(\"Taille du vocabulaire :\", len(vocabulary10k))\n",
+    "print(\"Sur 100k\")\n",
+    "print(\"Nombre de mots :\", len(words100k))\n",
+    "print(\"Taille du vocabulaire :\", len(vocabulary100k))\n",
+    "print(\"Sur tout\")\n",
+    "print(\"Nombre de mots :\", len(words))\n",
+    "print(\"Taille du vocabulaire :\", len(vocabulary))"
    ]
   }
  ],
