--- a/Code/0 - Formatage donnees.ipynb
+++ b/Code/0 - Formatage donnees.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,14 +20,15 @@
     "import csv\n",
     "import pickle\n",
     "\n",
-    "os.chdir('C:/Users/torna/Documents/StatApp/StatApp')\n",
+    "#os.chdir('C:/Users/torna/Documents/StatApp/StatApp')\n",
     "#os.chdir('C:/Users/Kim Antunez/Documents/Projets_autres')\n",
-    "#os.chdir('/Users/alainquartierlatente/Desktop/Ensae/StatApp')"
+    "#os.chdir('/Users/alainquartierlatente/Desktop/Ensae/StatApp')\n",
+    "os.chdir('/home/aqlt/Documents/Ensae/StatApp')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -36,8 +37,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "!\"#$%&'()*+,-./:;<=>?@[\\]^_`{|}~'’«»—\n",
-      "formattage terminé\n"
+      "!\"#$%&'()*+,-./:;<=>?@[\\]^_`{|}~'’«»—\n"
      ]
     }
    ],
@@ -385,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
