--- a/Code/1 - word2vec_modif100k.ipynb
+++ b/Code/1 - word2vec_modif100k.ipynb
@@ -41,8 +41,9 @@
     "\n",
     "import pickle\n",
     "\n",
-    "os.chdir('C:/Users/torna/Documents/StatApp/StatApp')\n",
-    "#os.chdir('/Users/alainquartierlatente/Desktop/Ensae/StatApp')"
+    "#os.chdir('C:/Users/torna/Documents/StatApp/StatApp')\n",
+    "#os.chdir('/Users/alainquartierlatente/Desktop/Ensae/StatApp')\n",
+    "os.chdir('/home/aqlt/Documents/Ensae/StatApp')"
    ]
   },
   {
@@ -332,7 +333,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -422,6 +425,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import statistics\n",
+    "statistics.mean(temps_par_epoch)/60"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {
     "scrolled": false
@@ -450,7 +463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
