--- a/Code/0 - Formatage donnees.ipynb
+++ b/Code/0 - Formatage donnees.ipynb
@@ -112,7 +112,7 @@
    "source": [
     "phrases = [phrase.split() for phrase in corpus]\n",
     "words = [item for sublist in phrases for item in sublist]\n",
-    "vocabulary = set(words)\n",
+    "vocabulary = list(dict.fromkeys(words))\n",
     "print(\"Nombre de mots :\", len(words))\n",
     "print(\"Taille du vocabulaire :\", len(vocabulary))"
    ]
@@ -189,7 +189,7 @@
    "source": [
     "phrases = [phrase.split() for phrase in corpus[0:10000]]\n",
     "words = [item for sublist in phrases for item in sublist]\n",
-    "vocabulary = set(words)\n",
+    "vocabulary = list(dict.fromkeys(words))\n",
     "print(\"Nombre de mots :\", len(words))\n",
     "print(\"Taille du vocabulaire :\", len(vocabulary))"
    ]
@@ -266,7 +266,7 @@
    "source": [
     "phrases = [phrase.split() for phrase in corpus[0:100000]]\n",
     "words = [item for sublist in phrases for item in sublist]\n",
-    "vocabulary = set(words)\n",
+    "vocabulary = list(dict.fromkeys(words))\n",
     "print(\"Nombre de mots :\", len(words))\n",
     "print(\"Taille du vocabulaire :\", len(vocabulary))"
    ]
@@ -354,9 +354,9 @@
     "words = [item for sublist in phrases for item in sublist]\n",
     "words10k = [item for sublist in phrases10k for item in sublist]\n",
     "words100k = [item for sublist in phrases100k for item in sublist]\n",
-    "vocabulary = set(words)\n",
-    "vocabulary10k = set(words10k)\n",
-    "vocabulary100k = set(words100k)\n",
+    "vocabulary = list(dict.fromkeys(words))\n",
+    "vocabulary10k = list(dict.fromkeys(words10k))\n",
+    "vocabulary100k = list(dict.fromkeys(words100k))\n",
     "print(\"Sur 10k\")\n",
     "print(\"Nombre de mots :\", len(words10k))\n",
     "print(\"Taille du vocabulaire :\", len(vocabulary10k))\n",
@@ -385,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
