neg_sampling amélioré

--- a/Code/0 - Formatage donnees.ipynb
+++ b/Code/0 - Formatage donnees.ipynb
@@ -58,7 +58,7 @@
     "    phrase = re.sub(' +', ' ', phrase)\n",
     "    phrase = re.sub(' +$', '', phrase)\n",
     "    phrase = re.sub('^ +', '', phrase)\n",
-    "    phrase.isalpha()\n",
+    "    # phrase.isalpha() # inutile\n",
     "    return(phrase)\n",
     "\n",
     "corpus = []\n",
