--- a/Code/Archive/1 - word2vec_modif10k.ipynb
+++ b/Code/Archive/1 - word2vec_modif10k.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,8 +42,8 @@
     "import pickle\n",
     "\n",
     "#os.chdir('C:/Users/torna/Documents/StatApp/StatApp')\n",
-    "#os.chdir('/Users/alainquartierlatente/Desktop/Ensae/StatApp')\n",
-    "os.chdir('/home/aqlt/Documents/Ensae/StatApp')"
+    "os.chdir('/Users/alainquartierlatente/Desktop/Ensae/StatApp')\n",
+    "#os.chdir('/home/aqlt/Documents/Ensae/StatApp')"
    ]
   },
   {
@@ -432,16 +432,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "matrice_finale = (input + output)/2\n",
-    "with open(\"data/matrice_finale_word2vec.file\", \"wb\") as f:\n",
-    "    pickle.dump(matrice_finale, f, pickle.HIGHEST_PROTOCOL)"
+    "W1 = autograd.Variable(torch.randn(1, 10).float(), requires_grad=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
